Issue #53 Iconos de news, servicios...

--- a/themes/daetsam/css/daetsam-alpha-default.css
+++ b/themes/daetsam/css/daetsam-alpha-default.css
@@ -116,6 +116,17 @@ img.logos-redes-sociales {
   margin-top: 0;
 }
 
+/* ======================================================================
+   Zona 'Header'
+   ====================================================================== */
+
+/* ----------------------------------------------------------------------
+   Región 'Header Top'
+   ---------------------------------------------------------------------- */
+
+.reg-header-top .block-image {
+  display:inline-block;
+}
 
 
 /* ######################################################################
