Modificado margen para el link "leer más" #45 en em

--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -627,7 +627,7 @@ li.alpha { /* Evita que aparezcan botones de lista en las vistas, en la versión
 }
 
 div.read-more {
-  margin-bottom:5px;
+  margin-bottom:.5em;
 }
 
 
