Cambiado margen a 1.5em

--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -540,9 +540,11 @@ img.logos-redes-sociales {
 }
 .block-imageblock-5,
 .block-imageblock-4,
-.block-imageblock-3 {
+.block-imageblock-3,
+.block-imageblock-8 {
   display:inline-block;
   vertical-align:middle;
+  margin-left:1.5em;
 }
 .block-31,
 
