Añadido margen para el bloque imagen noticias

--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -541,7 +541,8 @@ img.logos-redes-sociales {
 .block-imageblock-5,
 .block-imageblock-4,
 .block-imageblock-3,
-.block-imageblock-8 {
+.block-imageblock-8,
+.block-imageblock-9 {
   display:inline-block;
   vertical-align:middle;
   margin-left:1.5em;
