Margen para más iconos

--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -542,12 +542,14 @@ img.logos-redes-sociales {
 .block-imageblock-4,
 .block-imageblock-3,
 .block-imageblock-8,
-.block-imageblock-9 {
+.block-imageblock-9,
+.block-imageblock-12 {
   display:inline-block;
   vertical-align:middle;
   margin-left:1.5em;
 }
 .block-31,
+.block-16,
 
 .block-25,
 .block-26,
