Coma añadida en

--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -558,7 +558,7 @@ img.logos-redes-sociales {
 .block-20, /* Bloque de cabecera 'Cultura' */
 .block-21, /* Bloque de cabecera 'Cursos Daetsam' */
 .block-22, /* Bloque de cabecera 'Alquileres' */
-.block-23 /* Bloque de cabecera 'Orla' */
+.block-23, /* Bloque de cabecera 'Orla' */
 
 .block-24, /* Bloque de cabecera 'Últimas noticias' */
 .block-25, /* Bloque de cabecera 'Agenda' */
