--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -231,6 +231,11 @@ footer.submitted {
   padding-left: 0;
 }
 
+ul.lista-horizontal li,
+ol.lista-horizontal li { /* Hace que los elementos de una lista se pongan uno a continuación del otro en horizontal */
+  display:inline-block;
+}
+
 /* ======================================================================
    Botones, áreas de texto, introducción de datos, etc.
    (Sobreescribe 'omega/omega/css/formalize.css')
