Corrección de responsive images en el logo "ae"

--- a/themes/daetsam/css/daetsam-alpha-default-normal.css
+++ b/themes/daetsam/css/daetsam-alpha-default-normal.css
@@ -49,7 +49,7 @@ footer.submitted {
    ---------------------------------------------------------------------- */
 
 .reg-logo img { /* Ancho imagen logo = 126px */
-  /*width: 90%;*/
+  width: 90%;
 }
 
 /* ----------------------------------------------------------------------
