--- a/themes/daetsam/css/daetsam-alpha-default-wide.css
+++ b/themes/daetsam/css/daetsam-alpha-default-wide.css
@@ -14,7 +14,7 @@
    ---------------------------------------------------------------------- */
 
 .reg-logo img { /* Ancho imagen logo = 126px */
-  /*width: 70%;*/
+  width: 70%;
 }
 
 /* ======================================================================
