--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -366,7 +366,7 @@ img {
 }
 
 .reg-logo img {
-  /*width: 100%;*/
+  width: 100%;
 }
 
 /* ----------------------------------------------------------------------
