Corrección de responsive images en el logo "daetsam"

--- a/themes/daetsam/css/daetsam-alpha-default-wide.css
+++ b/themes/daetsam/css/daetsam-alpha-default-wide.css
@@ -36,5 +36,5 @@
    ---------------------------------------------------------------------- */
 
 .reg-footer-second img {
-  /*width: 17.24%; /* Ancho imagen logo completo = 100px */
+  width: 17.24%; /* Ancho imagen logo completo = 100px */
 }
