--- a/themes/daetsam/css/daetsam-alpha-default-narrow.css
+++ b/themes/daetsam/css/daetsam-alpha-default-narrow.css
@@ -73,6 +73,6 @@ img.logos-redes-sociales {
    ---------------------------------------------------------------------- */
 
 .reg-footer-second img { 
-  /*width: 20.59%; /* Ancho imagen logo completo = 70px */
+  width: 20.59%; /* Ancho imagen logo completo = 70px */
   margin-top: .3334em; /* = 4px */
 }
