Nube de tags con alineación correcta en mobile

--- a/themes/daetsam/css/daetsam-alpha-default.css
+++ b/themes/daetsam/css/daetsam-alpha-default.css
@@ -138,6 +138,17 @@ img.logos-redes-sociales {
    ====================================================================== */
 
 /* ----------------------------------------------------------------------
+   Región 'Sidebar first'
+   ---------------------------------------------------------------------- */
+.nube-de-tags {
+  text-align:left;
+}
+.nube-de-tags li {
+  display:block;
+}
+
+
+/* ----------------------------------------------------------------------
    Región 'Content'
    ---------------------------------------------------------------------- */
 .linea-inferior-fina {
