Iconos de cabeceras corregidos

--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -544,6 +544,7 @@ img.logos-redes-sociales {
 
 .reg-header-top {
   display:inline-block;
+  width:auto;
 }
 
 .block-imageblock-5,
@@ -613,6 +614,14 @@ img.logos-redes-sociales {
 .reg-header-top h1 .mayuscula-acento { /* Cambia el texto a versalitas (para usarlo en las vocales con acento en los títulos grandes de los apartados) */
   text-transform: none;
   font-variant: small-caps;
+}
+
+/* ----------------------------------------------------------------------
+   Región 'Header Icon'
+   ---------------------------------------------------------------------- */
+.reg-header-icon {
+  display:inline-block;
+  width:auto;
 }
 
 /* ----------------------------------------------------------------------
