Iconos de cabeceras
Añadida clase block-img-icons que establece la altura de los iconos de
cabeceras para cada anchura, en sus correspondientes css. La clase será
asignada a cada bloque de icono.

--- a/themes/daetsam/css/daetsam-alpha-default-narrow.css
+++ b/themes/daetsam/css/daetsam-alpha-default-narrow.css
@@ -68,6 +68,10 @@ img.logos-redes-sociales {
   padding-bottom: .013888em; /* = 1px */
 }
 
+.block-img-icons img {
+  height: 60px;
+}
+
 /* ----------------------------------------------------------------------
    Regi—n 'Footer Second'
    ---------------------------------------------------------------------- */
