--- a/themes/daetsam/css/daetsam-alpha-default-wide.css
+++ b/themes/daetsam/css/daetsam-alpha-default-wide.css
@@ -31,6 +31,10 @@
   padding-bottom: .024193em; /* = 3px */
 }
 
+.block-img-icons img {
+  height: 104px;
+}
+
 /* ----------------------------------------------------------------------
    Regi—n 'Footer Second'
    ---------------------------------------------------------------------- */
