Iconos de cabeceras

--- a/themes/daetsam/css/daetsam-alpha-default-wide.css
+++ b/themes/daetsam/css/daetsam-alpha-default-wide.css
@@ -32,7 +32,7 @@
 }
 
 .block-img-icons img {
-  height: 104px;
+  max-height: 104px;
 }
 
 /* ----------------------------------------------------------------------
