--- a/themes/daetsam/css/daetsam-alpha-default-narrow.css
+++ b/themes/daetsam/css/daetsam-alpha-default-narrow.css
@@ -69,7 +69,7 @@ img.logos-redes-sociales {
 }
 
 .block-img-icons img {
-  height: 60px;
+  max-height: 60px;
 }
 
 /* ----------------------------------------------------------------------
