--- a/themes/daetsam/css/daetsam-alpha-default.css
+++ b/themes/daetsam/css/daetsam-alpha-default.css
@@ -7,7 +7,6 @@
 /* ======================================================================
    Texto
    ====================================================================== */
-
 h1 {
   font-size: 1.333em; /* = 16px */
 }
@@ -59,6 +58,8 @@ h6 {
 
 .reg-menu {
   text-align: right;
+  height:auto;
+  border-bottom: none;
 }
 
 .reg-menu-separador { /* Quita la l’nea de separaci—n entre menœs de la versi—n m—vil */
@@ -75,6 +76,7 @@ h6 {
   margin-top: 0;
   margin-bottom: 0;
   text-align:right;
+  clear:none;
 }
 
 .redes-sociales {
@@ -151,6 +153,20 @@ img.logos-redes-sociales {
 /* ----------------------------------------------------------------------
    Región 'Content'
    ---------------------------------------------------------------------- */
+.widget {
+  width:100%;
+  display:inline-block;
+  margin-bottom:5px;
+}
+.widget-ic ul {
+  list-style:none;
+}
+.widget-ic li {
+  padding:5px 12px;
+}
+.widget-ic a {
+  color:#FFF;
+}
 .linea-inferior-fina {
   margin-bottom:10px;
   border-bottom:#000 3px solid;
