corregido de verde nuclear a verde normal

--- a/themes/daetsam/css/9m.css
+++ b/themes/daetsam/css/9m.css
@@ -13,7 +13,7 @@
    ====================================================================== */
 
 body {
-  background:#0B6;
+  background:#189531;
   color:#FFF;
 }
 
