--- a/themes/daetsam/css/daetsam-alpha-default-normal.css
+++ b/themes/daetsam/css/daetsam-alpha-default-normal.css
@@ -148,6 +148,26 @@ img.logos-redes-sociales {
 
 
 /* ######################################################################
+   Sección 'Content'
+   ###################################################################### */
+
+/* ======================================================================
+   Zona 'Content'
+   ====================================================================== */
+   
+/* ----------------------------------------------------------------------
+   Región 'Content'
+   ---------------------------------------------------------------------- */
+.banner-individual { /* Clase para la etiqueta 'a' de los banner */
+  display:block;
+  width:100%;
+  height:70px;
+}
+.banner-individual img { /* Clase para las imágenes dentro del banner 255 */
+  margin:10px;
+}
+
+/* ######################################################################
    Secci—n 'Footer'
    ###################################################################### */
 
